# metamusil

./: CMakeLists.txt
include/: function_deduction.hpp  function_type_descriptor.hpp  integer_sequence.hpp  member_variable_deduction.hpp  misc.hpp  sfinae.hpp  type_descriptor.hpp  type_list.hpp  type_stack.hpp  void_t.hpp
src/: main.cpp
tests/: test_function_deduction.cpp  test_function_type_descriptor.cpp  test_integer_sequence.cpp  test_member_variable_deduction.cpp  test_misc.cpp  test_sfinae.cpp  test_type_descriptor.cpp  test_type_list.cpp  test_type_stack.cpp
